deployment.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      workload.user.cattle.io/workloadselector: deployment-default-hypomos-web
    name: hypomos-web
    namespace: hypomos-dev
  spec:
    selector:
      matchLabels:
        workload.user.cattle.io/workloadselector: deployment-default-hypomos-web
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          workload.user.cattle.io/workloadselector: deployment-default-hypomos-web
      spec:
        imagePullSecrets:
        - name: pipeline-docker-registry
        containers:
        - image: ${CICD_REGISTRY}/hypomos/web:${CICD_EXECUTION_SEQUENCE}
          imagePullPolicy: Always
          name: hypomos-web
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      workload.user.cattle.io/workloadselector: deployment-default-hypomos-silo
    name: hypomos-silo
    namespace: hypomos-dev
  spec:
    selector:
      matchLabels:
        workload.user.cattle.io/workloadselector: deployment-default-hypomos-silo
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          workload.user.cattle.io/workloadselector: deployment-default-hypomos-silo
      spec:
        imagePullSecrets:
        - name: pipeline-docker-registry
        containers:
        - image: ${CICD_REGISTRY}/hypomos/silo:${CICD_EXECUTION_SEQUENCE}
          imagePullPolicy: Always
          name: hypomos-silo
          ports:
          - containerPort: 30000
            name: orleans
            protocol: TCP
        restartPolicy: Always
- apiVersion: v1
  kind: Service
  metadata:
    name: hypomos-web-lb
    namespace: hypomos-dev
  spec:
    selector:
      workload.user.cattle.io/workloadselector: deployment-default-hypomos-web
    type: LoadBalancer
    ports:
      - protocol: TCP
        port: 80
        targetPort: 80
- apiVersion: v1
  kind: Service
  metadata:
    name: hypomos-silo
    namespace: hypomos-dev
  spec:
    ports:
    - name: orleans
      port: 30000
      protocol: TCP
      targetPort: 30000
    selector:
      workload.user.cattle.io/workloadselector: deployment-default-hypomos-silo
      sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
